@@ -92,7 +92,7 @@ sbuild_nostream_LDADD = libtest.la
 sbuild_parse_value_SOURCES = sbuild-parse-value.cc
 sbuild_parse_value_LDADD = libtest.la
 
-sbuild_personality_SOURCES = sbuild-parse-value.cc
+sbuild_personality_SOURCES = sbuild-personality.cc
 sbuild_personality_LDADD = libtest.la
 
 sbuild_util_SOURCES = sbuild-util.cc
